fix: adjust gallery on mobile

--- a/src/app/components/gallery/gallery-card/gallery-card.component.scss
+++ b/src/app/components/gallery/gallery-card/gallery-card.component.scss
@@ -67,3 +67,17 @@ img.overlayImg {
   animation-duration: 0.5s;
   transition: opacity 0.5s;
 }
+
+@media screen and (max-width: 768px) {
+  .gallery-card {
+    width: 250px;
+
+    img {
+      max-height: 200px;
+    }
+  }
+
+  img.overlayImg {
+    width: 100%;
+  }
+}
